# db_migrations

./: COMMANDS.md  FILES.md  pyproject.toml
db_migrations/: README.md  bench.py
db_migrations/docker/: docker-compose.yml
db_migrations/pgmigbench/: __init__.py  cli.py  config.py  docker.py
db_migrations/pgmigbench/report/: __init__.py  aggregate.py
db_migrations/pgmigbench/strategies/: __init__.py  alembic_exec.py  mir.py
db_migrations/pgmigbench/telemetry/: __init__.py
db_migrations/pgmigbench/workload/scripts/: drop_new.sql  rename_new.sql  rename_old.sql  typenarrow_new.sql
db_migrations/tests/: test_aggregate.py  test_determinism.py  test_plans.py  test_stats.py  test_systemic_guard.py  test_telemetry_sampler.py
docker/: postgres.conf
pgmigbench/: __main__.py  runner.py
pgmigbench/report/: latex.py  stats.py
pgmigbench/scenarios/: __init__.py  base.py  families.py  generator.py
pgmigbench/strategies/: baseline_a.py  baseline_b.py
pgmigbench/telemetry/: metrics.py  sampler.py
pgmigbench/workload/: __init__.py  pgbench.py
pgmigbench/workload/scripts/: addnn_new.sql  addnn_old.sql  common.sql  drop_old.sql  fk_new.sql  fk_old.sql
tests/: test_generator_coverage.py  test_integration_smoke.py  test_report_latex.py
