[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmigbench"
version = "0.1.0"
description = "Reproducible PostgreSQL schema migration benchmark under load"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pgmigbench*"]

[tool.setuptools.package-data]
pgmigbench = ["workload/scripts/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: docker-backed integration test",
]
